example3/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: LoadBalancer
  selector:
    app: myapp #作用于所有app=helloexpress的Pod
  ports:
    - name: http
      port: 80
      targetPort: 3000 # => Deployment containerPort
